# expernetic-airbnb-analysis

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  add_save_cell.py  assesment.txt  bootstrap_models.py  docker-compose.yml  notebook_structure.txt  pyproject.toml  requirements.txt  scratch_inspect.py
.github/workflows/: ci.yml
app/: streamlit_dashboard.py
models/: README.md  model_meta.joblib  shap_explainer.joblib  xgboost_model.joblib
notebooks/: 01_eda.ipynb  02_price_prediction.ipynb  03_nlp_reviews.ipynb  04_recommender.ipynb  05_generative_ai.ipynb
reports/: Final_Report.md  Final_Report_Extended.md  Presentation_Slides.md  Submission_Summary.md  assumptions_and_decisions_log.md  data_profile_raw_output.txt  market_intelligence_briefings.txt
scripts/: run_pipeline.py  train_model.py
sql/: analytical_queries.sql
src/: __init__.py  build_warehouse.py  clean_calendar.py  clean_listings.py  clean_reviews.py  logging_config.py  profile_data.py
tests/: test_clean_calendar.py  test_integration.py  test_pipeline.py  test_profile_data.py
